--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@700&display=swap"
       rel="stylesheet"
     />
+    
     <title>ZonaGamer</title>
   </head>
   <body>
@@ -69,16 +70,127 @@
           </div>
         </div>
       </nav>
-      <div class="main"></div>
+      <div class="medium">
+      <div class="main">
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-container mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="../images/amongUs.png" alt="amongUs" />
+              <div class="card-descripcion">
+                <div class="card-tittle">
+                  <p>Among Us</p>
+                </div>
+                <div class="card-text">
+                  <p>Among Us</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <img src="../images/batmanvssuperman.jpg" alt="amongUs" />
+              <div class="card-descripcion">
+                <div class="card-tittle">
+                  <p>Nombre juego</p>
+                </div>
+                <div class="card-text">
+                  <p>Nombre juego Grande</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <img src="../images/CandyCrush.png" alt="amongUs" />
+              <div class="card-descripcion">
+                <div class="card-tittle">
+                  <p>Nombre juego</p>
+                </div>
+                <div class="card-text">
+                  <p>Nombre juego Grande</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <img src="../images/MarioBros.png" alt="amongUs" />
+              <div class="card-descripcion">
+                <div class="card-tittle">
+                  <p>Nombre juego</p>
+                </div>
+                <div class="card-text">
+                  <p>Nombre juego Grande</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <img src="../images/subway.png" alt="amongUs" />
+              <div class="card-descripcion">
+                <div class="card-tittle">
+                  <p>Nombre juego</p>
+                </div>
+                <div class="card-text">
+                  <p>Nombre juego Grande</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <img src="../images/FyA.png" alt="amongUs" />
+              <div class="card-descripcion">
+                <div class="card-tittle">
+                  <p>Nombre juego</p>
+                </div>
+                <div class="card-text">
+                  <p>Nombre juego Grande</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <img src="../images/amongUs.png" alt="amongUs" />
+              <div class="card-descripcion">
+                <div class="card-tittle">
+                  <p>Among Us</p>
+                </div>
+                <div class="card-text">
+                  <p>Among Us</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <img src="../images/amongUs.png" alt="amongUs" />
+              <div class="card-descripcion">
+                <div class="card-tittle">
+                  <p>Nombre juego</p>
+                </div>
+                <div class="card-text">
+                  <p>Nombre juego Grande</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <img src="../images/amongUs.png" alt="amongUs" />
+              <div class="card-descripcion">
+                <div class="card-tittle">
+                  <p>Nombre juego</p>
+                </div>
+                <div class="card-text">
+                  <p>Nombre juego Grande</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
       <footer>
-        <div class="cardJuego">
+        <!--<div class="cardJuego">
           <img src="../images/batmanvssuperman.jpg" alt="batmanvssuperman" />
           <div class="recuadroNombre">
             <p class="recuadroNombreChico">Batman vs Superman</p>
             <p class="recuadroNombreGrande">Batman vs Superman</p>
           </div>
-        </div>
+        </div>--!>
       </footer>
     </div>
+    <!-- Swiper JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="../js/prueba.js" type="text/javascript"></script>
   </body>
 </html>
