--- a/html/prueba.html
+++ b/html/prueba.html
@@ -16,12 +16,47 @@
     />
     <title>ZonaGamer</title>
   </head>
-  <!-- Swiper -->
   <body>
+    <header>
+      <div class="menuHamburgesa">
+        <svg class="hamburgesa">
+          <rect y="06" rx="5" fill="white" />
+          <rect y="26" rx="5" fill="white" />
+          <rect y="46" rx="5" fill="white" />
+        </svg>
+      </div>
+
+      <div class="logoo">
+        <img class="logo" src="../images/zonagamer2.png" alt="logo" />
+      </div>
+      <div class="headerDerecha">
+        <svg class="user" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M47.8958 5.0906C44.6214 1.8078 40.0479 0 35 0C29.9251 0 25.3366 1.79686 22.0773 5.05935C18.7827 8.35776 17.1774 12.8406 17.5543 17.6811C18.3014 27.2311 26.1274 34.9998 35 34.9998C43.8726 34.9998 51.6851 27.2327 52.444 17.6843C52.826 12.8874 51.2106 8.41401 47.8958 5.0906ZM64.6146 69.9996H5.38543C4.61017 70.009 3.84242 69.8577 3.13803 69.5569C2.43363 69.2561 1.81032 68.8132 1.31343 68.2605C0.219706 67.0465 -0.221147 65.3887 0.105286 63.7121C1.52544 56.3965 5.95753 50.2513 12.9237 45.9372C19.1125 42.1076 26.9519 39.9998 35 39.9998C43.0481 39.9998 50.8875 42.1091 57.0763 45.9372C64.0425 50.2497 68.4746 56.395 69.8947 63.7106C70.2211 65.3871 69.7803 67.0449 68.6866 68.259C68.1898 68.8119 67.5666 69.2551 66.8622 69.5562C66.1578 69.8573 65.39 70.0088 64.6146 69.9996Z"
+            fill="white"
+          />
+        </svg>
+        <svg class="carrito" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M26.4688 70C29.1266 70 31.2812 68.0412 31.2812 65.625C31.2812 63.2088 29.1266 61.25 26.4688 61.25C23.8109 61.25 21.6562 63.2088 21.6562 65.625C21.6562 68.0412 23.8109 70 26.4688 70Z"
+            fill="white"
+          />
+          <path
+            d="M67.375 70C70.0329 70 72.1875 68.0412 72.1875 65.625C72.1875 63.2088 70.0329 61.25 67.375 61.25C64.7171 61.25 62.5625 63.2088 62.5625 65.625C62.5625 68.0412 64.7171 70 67.375 70Z"
+            fill="white"
+          />
+          <path
+            d="M76.0225 10.6229C75.6202 10.1085 75.1134 9.6942 74.5389 9.41007C73.9644 9.12594 73.3365 8.97912 72.701 8.98026H18.2343L17.1373 2.47331C17.0203 1.7802 16.6734 1.15235 16.1577 0.700026C15.6419 0.247706 14.9901 -0.000147878 14.3169 6.61924e-08H2.86337C2.10396 6.61924e-08 1.37565 0.315378 0.838662 0.876753C0.301676 1.43813 0 2.19952 0 2.99342C0 3.78733 0.301676 4.54871 0.838662 5.11009C1.37565 5.67146 2.10396 5.98684 2.86337 5.98684H11.9152L20.0865 54.4017C20.2035 55.0948 20.5504 55.7227 21.0662 56.175C21.582 56.6273 22.2337 56.8751 22.907 56.875H68.7209C69.4803 56.875 70.2086 56.5596 70.7456 55.9983C71.2826 55.4369 71.5843 54.6755 71.5843 53.8816C71.5843 53.0877 71.2826 52.3263 70.7456 51.7649C70.2086 51.2035 69.4803 50.8882 68.7209 50.8882H25.3086L24.2993 44.9013H67.5469C68.5399 44.9 69.502 44.5401 70.2703 43.8824C71.0387 43.2248 71.566 42.3098 71.7632 41.2924L76.9173 14.3516C77.0415 13.6996 77.0256 13.0269 76.8709 12.3821C76.7162 11.7373 76.4264 11.1364 76.0225 10.6229Z"
+            fill="white"
+          />
+        </svg>
+      </div>
+    </header>
+    <h2 class="tipoDeJuego">Articulo</h2>
     <div class="main">
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-container mySwiper">
+      <div class="swiper-container mySwiper" id="swiper1" data-swiper="1">
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <img src="../images/amongUs.png" alt="amongUs" />
@@ -125,6 +160,269 @@
         </div>
       </div>
     </div>
+    <h2 class="tipoDeJuego">Articulo</h2>
+    <div class="main">
+      <div class="swiper-container mySwiper" id="swiper2" data-swiper="2">
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="../images/amongUs.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Among Us</p>
+              </div>
+              <div class="card-text">
+                <p>Among Us</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/batmanvssuperman.jpg" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/CandyCrush.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/MarioBros.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/subway.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/FyA.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/amongUs.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Among Us</p>
+              </div>
+              <div class="card-text">
+                <p>Among Us</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/amongUs.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/amongUs.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <h2 class="tipoDeJuego">Articulo</h2>
+
+    <div class="main">
+      <div class="swiper-container mySwiper" id="swiper3" data-swiper="3">
+        <div  class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="../images/amongUs.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Among Us</p>
+              </div>
+              <div class="card-text">
+                <p>Among Us</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/batmanvssuperman.jpg" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/CandyCrush.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/MarioBros.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/subway.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/FyA.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/amongUs.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Among Us</p>
+              </div>
+              <div class="card-text">
+                <p>Among Us</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/amongUs.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="../images/amongUs.png" alt="amongUs" />
+            <div class="card-descripcion">
+              <div class="card-tittle">
+                <p>Nombre juego</p>
+              </div>
+              <div class="card-text">
+                <p>Nombre juego Grande</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <footer>
+        <div class="image-container2">
+          <img src="../images/logoo.png" />
+          <img src="../images/secure.png" />
+          <img src="../images/master.png" />
+          <img src="../images/visa.png" />
+      </div>
+    
+        
+        <div class="grid-container">
+          <div class="item">
+            <b>Producto</b>
+            <p>Caracteristicas</p>
+            <p>Precios</p>
+            <p>Reviews</p>
+          </div>
+          <div class="item">
+            <b>Compañia</b>
+            <p>Acerca de</p>
+            <p>Contacto</p>
+            <p>Blog</p>
+          </div>
+          <div class="item">
+            <b>Soporte</b>
+            <p>Centro de ayuda</p>
+            <p>Estatus del servidor</p>
+            <p>Reportar un error</p>
+            <p>Soporte por chat</p>
+          </div>
+          <div class="item">
+            <b>Descargas</b>
+            <p>iOS</p>
+            <p>Android</p>
+            <p>Mac</p>
+            <p>Windows</p>
+            <p>Chrome</p>
+          </div>
+          <div class="item">
+            <b>Suscribete a nuestro boletin</b>
+            <p>Para novedades sobre nuestros futuros juegos nuevos pon tu correo electrónico</p>
+            <input class="input-subscribe" placeholder="Introduce tu email">
+            <button>Suscribirse</button>
+          </div>
+        </div>
+      </footer>
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="../js/prueba.js" type="text/javascript"></script>
