index fuera de la carpeta

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/prueba.css" />
+    <link rel="stylesheet" href="./css/prueba.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,7 +26,7 @@
         </svg>
       </div>
       <div class="logoo">
-        <img class="logo" src="../images/zonagamer2.png" alt="logo" />
+        <img class="logo" src="./images/zonagamer2.png" alt="logo" />
       </div>
       <div class="headerDerecha">
         <svg class="carrito" xmlns="http://www.w3.org/2000/svg">
@@ -132,7 +132,7 @@
     <div class="nav-2" id="nav_2">
       <ul class="nav-list">
         <div class="name-user">
-          <img src="../images/icono-perfil.png" class="image-user" />
+          <img src="./images/icono-perfil.png" class="image-user" />
           <li>Pepito123</li>
           <li class="font">pepito123@gmail.com</li>
         </div>
@@ -228,7 +228,7 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Among Us</p>
@@ -239,7 +239,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/batmanvssuperman.jpg" alt="amongUs" />
+            <img src="./images/batmanvssuperman.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -250,7 +250,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/CandyCrush.png" alt="amongUs" />
+            <img src="./images/CandyCrush.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -261,7 +261,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/MarioBros.png" alt="amongUs" />
+            <img src="./images/MarioBros.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -272,7 +272,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/subway.png" alt="amongUs" />
+            <img src="./images/subway.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -283,7 +283,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/FyA.png" alt="amongUs" />
+            <img src="./images/FyA.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -302,23 +302,23 @@
     <h2 class="tipoDeJuego">Juego Destacado</h2>
     <div class="important-game">
       <div class="content">
-        <img src="../images/subway-surfer.jpg" class="image-important-game" />
+        <img src="./images/subway-surfer.jpg" class="image-important-game" />
         <div class="game-details">
           <h1 class="title">Subway-Surfer</h1>
           <div class="mini-image">
             <img
-              src="../images/subway-surfer2.jpg"
+              src="./images/subway-surfer2.jpg"
               class="image-subimportant-game"
             />
             <img
-              src="../images/Subway-Surfer3.jpeg"
+              src="./images/Subway-Surfer3.jpeg"
               class="image-subimportant-game"
             />
             <img
-              src="../images/subway-surfers.jpg"
+              src="./images/subway-surfers.jpg"
               class="image-subimportant-game"
             />
-            <img src="../images/download.jpg" class="image-subimportant-game" />
+            <img src="./images/download.jpg" class="image-subimportant-game" />
           </div>
           <div class="price">
             <p>Disponible</p>
@@ -357,7 +357,7 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="../images/dead_chase.jpg" />
+            <img src="./images/dead_chase.jpg" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Accion</p>
@@ -369,7 +369,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/batmanvssuperman.jpg" alt="amongUs" />
+            <img src="./images/batmanvssuperman.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Accion</p>
@@ -404,7 +404,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/moto_x3m.png" alt="amongUs" />
+            <img src="./images/moto_x3m.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Accion</p>
@@ -415,7 +415,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/MarioBros.png" alt="amongUs" />
+            <img src="./images/MarioBros.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -426,7 +426,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/subway.png" alt="amongUs" />
+            <img src="./images/subway.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -437,7 +437,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/FyA.png" alt="amongUs" />
+            <img src="./images/FyA.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -448,7 +448,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Among Us</p>
@@ -459,7 +459,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -470,7 +470,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -490,7 +490,7 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Among Us</p>
@@ -501,7 +501,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/batmanvssuperman.jpg" alt="amongUs" />
+            <img src="./images/batmanvssuperman.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -512,7 +512,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/CandyCrush.png" alt="amongUs" />
+            <img src="./images/CandyCrush.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -523,7 +523,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/MarioBros.png" alt="amongUs" />
+            <img src="./images/MarioBros.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -534,7 +534,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/subway.png" alt="amongUs" />
+            <img src="./images/subway.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -545,7 +545,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/FyA.png" alt="amongUs" />
+            <img src="./images/FyA.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -556,7 +556,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Among Us</p>
@@ -567,7 +567,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -578,7 +578,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -601,7 +601,7 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Among Us</p>
@@ -612,7 +612,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/batmanvssuperman.jpg" alt="amongUs" />
+            <img src="./images/batmanvssuperman.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -623,7 +623,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/CandyCrush.png" alt="amongUs" />
+            <img src="./images/CandyCrush.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -634,7 +634,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/MarioBros.png" alt="amongUs" />
+            <img src="./images/MarioBros.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -645,7 +645,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/subway.png" alt="amongUs" />
+            <img src="./images/subway.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -656,7 +656,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/FyA.png" alt="amongUs" />
+            <img src="./images/FyA.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -677,7 +677,7 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Among Us</p>
@@ -688,7 +688,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/batmanvssuperman.jpg" alt="amongUs" />
+            <img src="./images/batmanvssuperman.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -699,7 +699,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/CandyCrush.png" alt="amongUs" />
+            <img src="./images/CandyCrush.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -710,7 +710,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/MarioBros.png" alt="amongUs" />
+            <img src="./images/MarioBros.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -721,7 +721,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/subway.png" alt="amongUs" />
+            <img src="./images/subway.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -732,7 +732,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/FyA.png" alt="amongUs" />
+            <img src="./images/FyA.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -743,7 +743,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Among Us</p>
@@ -754,7 +754,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -765,7 +765,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -781,10 +781,10 @@
 
     <footer>
       <div class="image-container2">
-        <img src="../images/zonagamer2.png" />
-        <img src="../images/secure.png" />
-        <img src="../images/master.png" />
-        <img src="../images/visa.png" />
+        <img src="./images/zonagamer2.png" />
+        <img src="./images/secure.png" />
+        <img src="./images/master.png" />
+        <img src="./images/visa.png" />
       </div>
       <div class="grid-container">
         <div class="item">
@@ -892,6 +892,6 @@
     </footer>
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="../js/prueba.js" type="text/javascript"></script>
+    <script src="./js/prueba.js" type="text/javascript"></script>
   </body>
 </html>
